log
Thu 09 May 2024 12:57:09 AM UTC: 
 tests:  1|8
total_score: 0/70
e1dae7e
Thu 09 May 2024 01:14:58 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2794096
Thu 09 May 2024 02:02:52 AM UTC: 
 treemap.c | 70 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 68 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:144:1: error: control reaches end of non-void function [-Werror=return-type]
  144 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
129182f
Thu 09 May 2024 02:03:16 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
7194296
Thu 09 May 2024 02:56:54 AM UTC: 
 treemap.c | 125 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 116 insertions(+), 9 deletions(-)
 tests:  12|6
total_score: 15/70
5a3396f
Thu 09 May 2024 03:03:44 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
b86195c
